# triggerpi

./: .gitignore  Makefile.am  configure.ac
m4/: ax_lib_bcm2835.m4
src/: Makefile.am
src/triggerpi/: ADC_board.h  ADC_ops.cc  ADC_ops.h  DAC_board.h  Makefile.am  basic_file_printer.h  basic_screen_printer.h  basic_trigger.h  bcm2835_sentry.cc  bcm2835_sentry.h  bits.h  board_init.cc  builtin_const_datasource.h  builtin_log_trigger.h  builtin_time_trigger.h  builtin_trigger.h  expansion_board.h  immediate_trigger.h  main.cc  production_chain.h  setup_SPI.cc  setup_SPI.h  shared_block_buffer.h  time_util.h  timed_trigger.h  trigger_chain.h  triggerpi_config  waveshare_ADS1256.cc  waveshare_ADS1256.h  waveshare_ADS1256_config.cc  waveshare_ADS1256_expansion.cc  waveshare_ADS1256_expansion.h  waveshare_DAC8532_expansion.cc  waveshare_DAC8532_expansion.h  waveshare_expansion.cc  waveshare_expansion.h  waveshare_expansion_config.cc
